--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
   <meta name="author" content="Okosun Valentine Ejodamen (valenstical@gmail.com)"> 
   <title>iReporter React|Easily report cases of corruption and areas that needs government intervention|Andela Developer Challenge</title>     
   <meta name="theme-color" content="#009f8b"> 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,700,800" rel="stylesheet">
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->     
   <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
