--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
   <meta name="theme-color" content="#009f8b"> 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,700,800" rel="stylesheet">
+  <link href="https://unpkg.com/react-toastify@latest/dist/ReactToastify.css" rel="stylesheet" type="text/css" />
+
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->     
   <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
